--- a/src/componentes/tareaFormulario.module.css
+++ b/src/componentes/tareaFormulario.module.css
@@ -1,5 +1,5 @@
 .header {
-    background: #050505;
+    background: #0c181c;
     display: flex;
     align-items: center;
     justify-content: center;
