--- a/src/componentes/tareaFormulario.module.css
+++ b/src/componentes/tareaFormulario.module.css
@@ -36,7 +36,7 @@
   .newTaskForm button {
     height: 100%;
     padding: 0 16px;
-    background: #1E6F9F;
+    background: #302929;
     color: #fff;
     border: none;
     border-radius: 8px;
